@@ -3722,6 +3722,14 @@ address-range = ""
             (Defaults to windows-1252)
         </entry></row>
 
+     <row><entry><literal>retry</literal></entry>
+        <entry><literal>boolean</literal></entry>
+        <entry valign="bottom">
+            Defines if SMSC should retry to connect even if SMSC sent error that
+            username or password is incorrect.
+            (Defaults to false)
+        </entry></row>
+
     <row><entry><literal>connection-timeout</literal></entry>
       <entry><literal>number (seconds)</literal></entry>
       <entry valign="bottom">
