@@ -1,4 +1,8 @@
 2020-01-06 Alexander Malysh <amalysh @ kannel.org>
+   * gw/smsc/smsc_smpp.c, doc/userguide.xml, gwlib/cfg.def: added new config
+     option to retry even if SMSC rejects login due to wrong username & password.
+
+2020-01-06 Alexander Malysh <amalysh @ kannel.org>
     * doc/userguide/userguide.xml, gw/urltrans.c: added %U escape code for
       hexcoded UDH.
 
